profile details some z-index problems fixed

--- a/public/styles/gamelist.css
+++ b/public/styles/gamelist.css
@@ -339,7 +339,7 @@
     position: absolute;
     top: 0;
     left: 0;
-    z-index: 1;
+    z-index: -1;
     pointer-events: none;
     opacity: 0.85;
     width: 100%;
@@ -966,7 +966,6 @@ input[readonly] {
 .profile-topbar,
 .gamelist-full-section {
     position: relative;
-    z-index: 2;
     width: 100%;
     display: flex;
     gap: 10px;
@@ -1299,6 +1298,7 @@ input[readonly] {
     border: 1px solid rgb(255,255,255,0.2);
     cursor: pointer;
     opacity: 1;
+    z-index: 1;
     scale: 1;
     transition: background-color 0.3s ease;
     backdrop-filter: blur(3px);
